--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,7 +22,7 @@ on:
       environment:
         description: 'Environment to run tests against'
         type: environment
-        required: false
+        required: true
 
 jobs:
   print-tag:
