--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: build
-        run: echo 'building'
+        echo 'building'
 
   publish:
     needs: [build]
@@ -17,4 +17,4 @@ jobs:
     environment: production
     steps:
       - name: publish
-        run: echo 'publishing'
+        echo 'publishing'
